--- a/domain.yml
+++ b/domain.yml
@@ -1,15 +1,87 @@
 intents:
+- barchart_reco
+- barchart_ggplot_reco
+- barchart_seaborn_reco
+- barchart_bokeh_reco
+- barchart_code_reco
+- barchart_matplotlib_reco
+- code_reco:
+    use_entities: []
+- barplot_code_reco:
+    use_entities: []
 - greet
 - bye
 - thank
+- automateEDA_reco
+- boxplot_reco
+- thankyou
+- barplot1_reco
+- barplot_matplotlib_reco
+- barplot_seaborn_reco
+- barplot_bokeh_reco
+- barplot_ggplot_reco
 templates:
   utter_noworries:
   - text: No worries!
   utter_greet:
-  - text: Hi
+  - text: 'Hello! I am Gideon. I can help you master the world of Data Science. '
   utter_bye:
   - text: Bye!
+  utter_automateEDA:
+  - text: "Below is the code to Automate the EDA\n\n #importing sweetviz\n import\
+      \ sweetviz as sv\n #analyzing the dataset\n advert_report = sv.analyze(df)\n\
+      \ #display the report\n advert_report.show_html('Advertising.html')"
+  utter_ask_code:
+  - text: Which of the below problems suit your requirement?
+    buttons:
+    - title: Automate EDA
+      payload: /automateEDA_reco
+  utter_boxplot:
+  - text: A Bar chart or graph is a data visualization technique where each category
+      is represented by a rectangle. The height of the rectangle is in the propotion
+      to the values being plotted. It is also called column chart.
+  utter_barchart:
+  - text: 'So you need more details! Fundamentaly, Bar charts is the simplest visualisation
+      method to show comparison between the categories. It may be vertical or horizontal. '
+  utter_ask_barchart:
+  - text: Which python library you want to use?
+    buttons:
+    - title: Matplotlib
+      payload: /utter_barchart_matplotlib
+    - title: Seaborn
+      payload: /utter_barchart_seaborn
+    - title: Plotly
+      payload: /utter_barchart_plotly
+    - title: Bokeh
+      payload: /utter_barchart_bokeh
+    - title: Ggplot
+      payload: /utter_barchart_ggplot
+  utter_boxplot_matplotlib:
+  - text: "It is quite easy. Here is the sample code.        \nimport matplotlib.pyplot\
+      \ as\nplt fig = plt.figure() \nax = fig.add_axes([0,0,1,1]) \nlangs= ('C','C++','Java','Python','PHP')\
+      \ \nstudents = (23,17,35,29,12) \nax.bar(langs,students)\nplt.show()"
 actions:
 - utter_noworries
 - utter_greet
 - utter_bye
+- utter_automateEDA
+- utter_ask_code
+- utter_histogram_code
+- utter_boxplot_code
+- utter_boxplot
+- utter_boxplot1
+- utter_frequency
+- utter_meanencoder
+- utter_ask_code1
+- utter_ask_barplot
+- utter_barplot_matplotlib
+- utter_barplot_plotly
+- utter_barplot_bokeh
+- utter_barplot_ggplot
+- utter_barchart
+- utter_ask_barchart
+- utter_barchart1
+- utter_barchart_plotly
+- utter_barchart_bokeh
+- utter_barchart_matplotlib
+- utter_barchart_ggplot
