--- a/domain.yml
+++ b/domain.yml
@@ -1,4 +1,6 @@
 intents:
+- barchart_plotly_reco
+- barchart1_reco
 - barchart_reco
 - barchart_ggplot_reco
 - barchart_seaborn_reco
@@ -13,14 +15,15 @@ intents:
 - bye
 - thank
 - automateEDA_reco
-- boxplot_reco
 - thankyou
-
 templates:
   utter_noworries:
   - text: No worries!
   utter_greet:
   - text: 'Hello! I am Gideon. I can help you master the world of Data Science. '
+    buttons:
+    - title: Code recommendation
+      payload: /code_reco
   utter_bye:
   - text: Bye!
   utter_automateEDA:
@@ -32,45 +35,45 @@ templates:
     buttons:
     - title: Automate EDA
       payload: /automateEDA_reco
-  utter_boxplot:
+  utter_barchart:
   - text: A Bar chart or graph is a data visualization technique where each category
       is represented by a rectangle. The height of the rectangle is in the propotion
       to the values being plotted. It is also called column chart.
-  utter_boxplot1:
+  utter_barchart1:
   - text: 'So you need more details! Fundamentaly, Bar charts is the simplest visualisation
       method to show comparison between the categories. It may be vertical or horizontal. '
-  utter_ask_boxplot:
+  utter_ask_code1:
   - text: Which python library you want to use?
     buttons:
     - title: Matplotlib
-      payload: /utter_boxplot_matplotlib
+      payload: /barchart_matplotlib_reco
     - title: Seaborn
-      payload: /utter_boxplot_seaborn
+      payload: /barchart_seaborn_reco
     - title: Plotly
-      payload: /utter_boxplot_plotly
+      payload: /barchart_plotly_reco
     - title: Bokeh
-      payload: /utter_boxplot_bokeh
+      payload: /barchart_bokeh_reco
     - title: Ggplot
-      payload: /utter_boxplot_ggplot
-
-  utter_boxplot_matplotlib:
-  - text: "It is quite easy. Here is the sample code.        \nimport matplotlib.pyplot\
-      \ as\nplt fig = plt.figure() \nax = fig.add_axes([0,0,1,1]) \nlangs= ('C','C++','Java','Python','PHP')\
-      \ \nstudents = (23,17,35,29,12) \nax.bar(langs,students)\nplt.show()"
+      payload: /barchart_ggplot_reco
+  utter_barchart_matplotlib:
+  - text: "Here is the sample code.        \nimport matplotlib.pyplot as\nplt fig\
+      \ = plt.figure() \nax = fig.add_axes([0,0,1,1]) \nlangs= ('C','C++','Java','Python','PHP')\n\
+      students = (23,17,35,29,12) \nax.bar(langs,students)\nplt.show()"
+  utter_barchart_seaborn:
+  - text: "Here is the sample code.   \nimport seaborn as sns  \nsns.set(style=\"\
+      whitegrid\")\ntips = sns.load_dataset(\"tips\")  \nax = sns.barplot(x=\"day\"\
+      ,y=\"total_bill\",data=tips)"
+  utter_barchart_plotly:
+  - text: "Here is the sample code.      \nimport plotly.graph_objs as go    \nlangs\
+      \ =  ('C','C++',  'Java', 'Python', 'PHP')\nstudents = (23,17,35,29,12) \ndata\
+      \ =  (go.Bar(x = langs,y = students ))    \nfig = go.Figure(data=data)    \n\
+      iplot(fig)"
 actions:
 - utter_noworries
 - utter_greet
 - utter_bye
 - utter_automateEDA
 - utter_ask_code
-- utter_histogram_code
-- utter_boxplot_code
-- utter_boxplot
-- utter_boxplot1
-- utter_frequency
-- utter_meanencoder
-- utter_ask_code1
-- utter_ask_barplot
 - utter_barchart
 - utter_ask_barchart
 - utter_barchart1
@@ -78,4 +81,19 @@ actions:
 - utter_barchart_bokeh
 - utter_barchart_matplotlib
 - utter_barchart_ggplot
-
+- utter_barchart_seaborn
+- utter_histogram_bokeh
+- utter_histogram
+- utter_histogram_plotly
+- utter_histogram_matplotlib
+- utter_histogram_seaborn
+- utter_histogram_ggplot
+- utter_ask_histogram
+- utter_linechart_seaborn
+- utter_linechart_plotly
+- utter_linechart
+- utter_linechart_ggplot
+- utter_ask_linechart
+- utter_linechart_bokeh
+- utter_linechart_matplotlib
+- utter_linechart1
